# ramses-composer

./: .gitignore  CMakeLists.txt  README.md  index.md
EditorApp/: CMakeLists.txt  EditMenu.cpp  EditMenu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  versiondialog.cpp
components/libApplication/src/: RaCoApplication.cpp  RaCoProject.cpp
components/libComponents/src/: MeshCacheImpl.cpp
components/libMeshLoader/src/: CTMFileLoader.cpp  glTFFileLoader.cpp
components/libRamsesBase/: CMakeLists.txt
datamodel/: CMakeLists.txt
datamodel/libCore/: CMakeLists.txt
datamodel/libCore/src/: CommandInterface.cpp  Context.cpp  Handles.cpp  PathQueries.cpp  Project.cpp  ProjectMigration.cpp  Queries.cpp  Serialization.cpp  Undo.cpp
datamodel/libCore/tests/: Undo_test.cpp
datamodel/libDataManager/: CMakeLists.txt
datamodel/libDataManager/include/animation_editor/: ConvertEditorAnimation.h
datamodel/libDataManager/include/data_Convert/: ProgramDefine.h  ProgramManager.h
datamodel/libDataManager/src/: ConvertEditorAnimation.cpp  ProgramManager.cpp
datamodel/libGuiData/: CMakeLists.txt
datamodel/libGuiData/include/AnimationData/: animationData.h
datamodel/libGuiData/include/CurveData/: CurveData.h
datamodel/libGuiData/include/MaterialData/: materialData.h  materialManager.h
datamodel/libGuiData/include/NodeData/: nodeDataEx.h  nodeManager.h
datamodel/libGuiData/include/RenderData/: RenderDataManager.h
datamodel/libGuiData/include/VisualCurveData/: VisualCurvePosManager.h
datamodel/libGuiData/src/: CurveData.cpp  CurveManager.cpp  RenderDataManager.cpp  VisualCurvePosManager.cpp  animationData.cpp  materialData.cpp  materialManager.cpp  nodeDataEx.cpp  nodeManager.cpp
datamodel/libMaterialLogic/: CMakeLists.txt
datamodel/libMaterialLogic/src/: materalLogic.cpp
datamodel/libNodeLogic/: CMakeLists.txt
datamodel/libNodeLogic/src/: NodeLogic.cpp
datamodel/libUserTypes/: CMakeLists.txt
datamodel/libUserTypes/src/: MeshNode.cpp
gui/: CMakeLists.txt
gui/libAnimation/src/: AnimationView.cpp
gui/libCommonWidgets/src/: ExportDialog.cpp  MeshAssetImportDialog.cpp
gui/libCurve/: CMakeLists.txt
gui/libCurve/src/: CurveNameWidget.cpp
gui/libDataConvert/: CMakeLists.txt
gui/libNodeLogic/src/: NodeLogic.cpp
gui/libObjectTree/: CMakeLists.txt
gui/libPropertyBrowser/: CMakeLists.txt
gui/libRamsesWidgets/: CMakeLists.txt
luaAnimation/: CurveModule.lua  DataModule.lua  LuaScript.lua  build.bat  json.lua
resources/: CMakeLists.txt  StandardProject.rca
resources/meshes/: Cube.gltf  Plane.gltf  Skybox.gltf  Sphere.gltf
resources/shaders/: base.frag  base.vert  glsl_pbr_zxj.frag  glsl_pbr_zxj.vert  skybox.frag  skybox.vert
styles/: icons.qrc
(+118 files in other folders)
